# emscripten-wasm

./: README.md
emscripten-cmake/: CMakeLists.txt  calc.cpp  calc.hpp  test.cpp
hello_world/: hello_world.c
